# flume

./: .buildinfo  .gitignore  .pre-commit-config.yaml  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.doctrees/source/: README.doctree  analysis_methods_demo.doctree  base_class_reference.doctree  flume_overview.doctree  interface_reference.doctree
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: black.yml  deploy.yml  test.yml
_sources/: index.rst.txt
_sources/source/: analysis_methods_demo.ipynb.txt  flume_overview.ipynb.txt
base_classes/: analysis.py  analysis_base.py  state.py  transfer.py  transfer_base.py
docs/: conf.py  index.rst
docs/source/: README.md  analysis_methods_demo.ipynb  base_class_reference.rst  flume_overview.ipynb  interface_reference.rst  requirements.txt
docs/source/_static/: custom.css  repo.js
docs/source/_templates/: layout.html
examples/: flume_overview.ipynb  methods_demo.py
examples/autodiff/: autodif_test.py
examples/cantilever_beam/: beam_opt.py  compliance.py  independents.py  inertia.py  linear_solve.py  volume.py
examples/hohmann_transfer/: delta_v.py  inclination_change.py  independents.py  leo_to_geo.py  total_delta_v.py  transfer_orbit.py  vcirc.py
examples/momentum_theory/: momentum_model.py  profile_parasitic_power.py
examples/multi_objective/: multi_objective.py
examples/rosenbrock/: rosenbrock.py  rosenbrock_constrained_opt.py  rosenbrock_problem_classes.py  rosenbrock_unconstrained_opt.py
examples/simple/: toy.py
examples/thomson_problem/: thomson_problem_classes.py  thomson_problem_opt.py
flume/base_classes/: analysis.py  state.py  system.py  system_html.py
flume/examples/: methods_demo.py
flume/examples/hohmann_transfer/: delta_v.py  leo_to_geo.py
flume/interfaces/: paropt_interface.py  scipy_interface.py  utils.py
flume/utils/: plot_flume_log.py  read_flume_log.py
joss/: paper.bib  paper.md
source/: README.html  analysis_methods_demo.html  base_class_reference.html  flume_overview.html  interface_reference.html
tests/: opt_problem_classes.py  test_analysis.py  test_paropt_interface.py  test_rosenbrock.py  test_scipy_interface.py  test_state.py
tests/jax_tests/: test_mimo.py  test_miso.py  test_simo.py  test_siso.py  test_subanalysis.py
