[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flume"
version = "0.2.0"
description = "A framework for performing forward and derivative analyses for systems following directed acylic graph structure."
readme = "README.md"
authors = [{ name = "Cameron Smith", email = "csmith763@gatech.edu" }]

[project.scripts]
plot_flume_log = "flume.utils.plot_flume_log:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
